organizr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: organizr
  labels:
    app: organizr
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: organizr
