organizr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "5"
    cert-manager.io/cluster-issuer: le-production
  labels:
    app: organizr
  name: organizr
spec:
  rules:
    - host: nickflix.io
      http:
        paths:
          - backend:
              serviceName: organizr
              servicePort: 80
            path: /
  tls:
    - hosts:
        - nickflix.io
      secretName: nickflix-io
